# TEST_DiginiF4

./: .gdbinit_gcc13.2.1  .gitignore  CMakeLists.txt  CMakePresets.json  cmakelist.txt
App/: startup_stm32f4xx.S
App/inc/: bsp.h  taskIdle.h  taskMQTT.h  taskTCP_Client.h  task_network.h
App/src/: bsp.cpp  irq.cpp  main.cpp  taskIdle.cpp  taskMQTT.cpp  taskTCP_Client.cpp  task_network.cpp
Config/: bsp_io_def.h  cli_cfg.h  clock_cfg.h  console_cfg.h  console_var.h  crc_cfg.h  database_cfg.h  device_cfg.h  device_var.h  digini_cfg.h  dma_cfg.h  dma_var.h  driver_cfg.h  ip_cfg.h  ip_var.h  label_cfg.h  memory_cfg.h  nOSConfig.h  project_def.h  pwm_cfg.h  pwm_var.h  spi_cfg.h  spi_var.h  tim_cfg.h  tim_var.h  uart_cfg.h  uart_var.h  vt100_cfg.h
Test_DiginiF4/: DMA Usage.xlsx  STM32F429.svd  Test_DiginiF4.ebp  Test_DiginiF4.eds  ebmon.c  ebmon.h  stm32f401re_flash.ld  stm32f429zi_flash.ld
Wifi/wifi_server/: wifi_server.ino
cmake/: arm-none-eabi-gcc.cmake
